<resources>
    <string name="app_name">BookList</string>
    <string name="title_heading">Title:</string>
    <string name="publisher_heading">Publisher:</string>
    <string name="authors_heading">Authors:</string>
    <string name="search_hint">search term</string>
    <string name="search_button">Search</string>
    <string name="search_description">Enter a search term to obtain a list of matching eBooks
        in Google Books service.</string>
    <string name="empty_search_results">No ebook titles match your search term, try entering a new search term</string>
    <string name="no_connectivity_warning">Your system does not have connectivity at this time.
    Please check wifi settings and also check to see that you do not have Airplane Mode on.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Book Search Settings</string>

    <string name="settings_search_max_results_label">Max Results</string>
    <string name="settings_search_max_results_key" translatable="false">max_results</string>
    <string name="settings_search_max_results_default" translatable="false">10</string>

    <string name="settings_sorting_order_label">Sort By</string>
    <string name="settings_sorting_order_key" translatable="false">sort_mode</string>
    <string name="settings_sorting_order_default" translatable="false">relevance</string>

    <string name="settings_sorting_order_by_relevance_label">Relevance</string>
    <string name="settings_sorting_order_by_relevance_value">relevance</string>

    <string name="settings_sorting_order_chronological_label">Chronological</string>
    <string name="settings_sorting_order_chronological_value">newest</string>
</resources>
