<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_search_max_results_default"
        android:inputType="number"
        android:key="@string/settings_search_max_results_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_search_max_results_label" />

    <ListPreference
        android:defaultValue="@string/settings_sorting_order_by_relevance_value"
        android:entries="@array/settings_search_by_labels"
        android:entryValues="@array/settings_search_by_values"
        android:key="@string/settings_sorting_order_key"
        android:title="@string/settings_sorting_order_label"/>

</PreferenceScreen>